// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`2 column stacking 1`] = `
.emotion-10 {
  background: #269;
  border: 2px solid #00aaee;
  text-align: center;
  font-size: 12px;
  color: #fff;
}

<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 emotion-0 emotion-1"
    id="bl-2 column stacking23456"
  >
    <div
      id="2 column stacking23456"
    >
      <div
        class="ant-row emotion-0 emotion-1"
        id="2 column stacking-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-6 emotion-0 emotion-1"
          id="bl-b123456"
        >
          <div
            id="b123456"
          >
            <div
              class="ant-row emotion-0 emotion-1"
              id="b1-content23456"
            >
              <div
                class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 emotion-0 emotion-1"
                id="bl-tile_one23456"
                style="height: 80px;"
              >
                <div
                  class="emotion-10"
                  id="tile_one23456"
                >
                  tile_one23456
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-18 emotion-0 emotion-1"
          id="bl-b223456"
        >
          <div
            id="b223456"
          >
            <div
              class="ant-row emotion-0 emotion-1"
              id="b2-content23456"
            >
              <div
                class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 emotion-0 emotion-1"
                id="bl-tile_two23456"
                style="height: 40px;"
              >
                <div
                  class="emotion-10"
                  id="tile_two23456"
                >
                  tile_two23456
                </div>
              </div>
              <div
                class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 emotion-0 emotion-1"
                id="bl-tile_three23456"
                style="height: 20px;"
              >
                <div
                  class="emotion-10"
                  id="tile_three23456"
                >
                  tile_three23456
                </div>
              </div>
              <div
                class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 emotion-0 emotion-1"
                id="bl-tile_four23456"
                style="height: 30px;"
              >
                <div
                  class="emotion-10"
                  id="tile_four23456"
                >
                  tile_four23456
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4 block grid 1`] = `
.emotion-6 {
  background: #269;
  border: 2px solid #00aaee;
  text-align: center;
  font-size: 12px;
  color: #fff;
}

<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 emotion-0 emotion-1"
    id="bl-4 block grid23456"
  >
    <div
      id="4 block grid23456"
    >
      <div
        class="ant-row emotion-0 emotion-1"
        id="4 block grid-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 emotion-0 emotion-1"
          id="bl-tile_one23456"
        >
          <div
            class="emotion-6"
            id="tile_one23456"
          >
            tile_one23456
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 emotion-0 emotion-1"
          id="bl-tile_two23456"
        >
          <div
            class="emotion-6"
            id="tile_two23456"
          >
            tile_two23456
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 emotion-0 emotion-1"
          id="bl-tile_three23456"
        >
          <div
            class="emotion-6"
            id="tile_three23456"
          >
            tile_three23456
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 emotion-0 emotion-1"
          id="bl-tile_four23456"
        >
          <div
            class="emotion-6"
            id="tile_four23456"
          >
            tile_four23456
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4 block grid with gutter 1`] = `
.emotion-6 {
  background: #269;
  border: 2px solid #00aaee;
  text-align: center;
  font-size: 12px;
  color: #fff;
}

<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 emotion-0 emotion-1"
    id="bl-4 block grid with gutter23456"
  >
    <div
      id="4 block grid with gutter23456"
    >
      <div
        class="ant-row emotion-0 emotion-1"
        id="4 block grid with gutter-content23456"
        style="margin-inline: -25px; row-gap: 50px;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 emotion-0 emotion-1"
          id="bl-tile_one23456"
          style="padding-inline: 25px;"
        >
          <div
            class="emotion-6"
            id="tile_one23456"
          >
            tile_one23456
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 emotion-0 emotion-1"
          id="bl-tile_two23456"
          style="padding-inline: 25px;"
        >
          <div
            class="emotion-6"
            id="tile_two23456"
          >
            tile_two23456
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 emotion-0 emotion-1"
          id="bl-tile_three23456"
          style="padding-inline: 25px;"
        >
          <div
            class="emotion-6"
            id="tile_three23456"
          >
            tile_three23456
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 emotion-0 emotion-1"
          id="bl-tile_four23456"
          style="padding-inline: 25px;"
        >
          <div
            class="emotion-6"
            id="tile_four23456"
          >
            tile_four23456
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4 block grid with various heights 1`] = `
.emotion-6 {
  background: #269;
  border: 2px solid #00aaee;
  text-align: center;
  font-size: 12px;
  color: #fff;
}

<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 emotion-0 emotion-1"
    id="bl-4 block grid with various heights23456"
  >
    <div
      id="4 block grid with various heights23456"
    >
      <div
        class="ant-row emotion-0 emotion-1"
        id="4 block grid with various heights-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 emotion-0 emotion-1"
          id="bl-tile_one23456"
          style="height: 50px;"
        >
          <div
            class="emotion-6"
            id="tile_one23456"
          >
            tile_one23456
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 emotion-0 emotion-1"
          id="bl-tile_two23456"
          style="height: 40px;"
        >
          <div
            class="emotion-6"
            id="tile_two23456"
          >
            tile_two23456
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 emotion-0 emotion-1"
          id="bl-tile_three23456"
          style="height: 20px;"
        >
          <div
            class="emotion-6"
            id="tile_three23456"
          >
            tile_three23456
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 emotion-0 emotion-1"
          id="bl-tile_four23456"
          style="height: 30px;"
        >
          <div
            class="emotion-6"
            id="tile_four23456"
          >
            tile_four23456
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4 sequential blocks 1`] = `
.emotion-6 {
  background: #269;
  border: 2px solid #00aaee;
  text-align: center;
  font-size: 12px;
  color: #fff;
}

<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 emotion-0 emotion-1"
    id="bl-4 sequential blocks23456"
  >
    <div
      id="4 sequential blocks23456"
    >
      <div
        class="ant-row emotion-0 emotion-1"
        id="4 sequential blocks-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 emotion-0 emotion-1"
          id="bl-tile_one23456"
        >
          <div
            class="emotion-6"
            id="tile_one23456"
          >
            tile_one23456
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 emotion-0 emotion-1"
          id="bl-tile_two23456"
        >
          <div
            class="emotion-6"
            id="tile_two23456"
          >
            tile_two23456
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 emotion-0 emotion-1"
          id="bl-tile_three23456"
        >
          <div
            class="emotion-6"
            id="tile_three23456"
          >
            tile_three23456
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 emotion-0 emotion-1"
          id="bl-tile_four23456"
        >
          <div
            class="emotion-6"
            id="tile_four23456"
          >
            tile_four23456
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`typical dashboard 1`] = `
.emotion-6 {
  background: #269;
  border: 2px solid #00aaee;
  text-align: center;
  font-size: 12px;
  color: #fff;
}

<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 emotion-0 emotion-1"
    id="bl-typical dashboard23456"
  >
    <div
      id="typical dashboard23456"
    >
      <div
        class="ant-row emotion-0 emotion-1"
        id="typical dashboard-content23456"
        style="margin-inline: -5px; row-gap: 10px;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-8 emotion-0 emotion-1"
          id="bl-tile_one23456"
          style="padding-inline: 5px; height: 80px;"
        >
          <div
            class="emotion-6"
            id="tile_one23456"
          >
            tile_one23456
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-8 emotion-0 emotion-1"
          id="bl-tile_two23456"
          style="padding-inline: 5px; height: 80px;"
        >
          <div
            class="emotion-6"
            id="tile_two23456"
          >
            tile_two23456
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-8 emotion-0 emotion-1"
          id="bl-tile_three23456"
          style="padding-inline: 5px; height: 80px;"
        >
          <div
            class="emotion-6"
            id="tile_three23456"
          >
            tile_three23456
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 emotion-0 emotion-1"
          id="bl-tile_four23456"
          style="padding-inline: 5px; height: 80px;"
        >
          <div
            class="emotion-6"
            id="tile_four23456"
          >
            tile_four23456
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 emotion-0 emotion-1"
          id="bl-tile_five23456"
          style="padding-inline: 5px; height: 80px;"
        >
          <div
            class="emotion-6"
            id="tile_five23456"
          >
            tile_five23456
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 emotion-0 emotion-1"
          id="bl-tile_six23456"
          style="padding-inline: 5px; height: 80px;"
        >
          <div
            class="emotion-6"
            id="tile_six23456"
          >
            tile_six23456
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
